--- a/Framework/Zerra.Test/Zerra.Test.csproj
+++ b/Framework/Zerra.Test/Zerra.Test.csproj
@@ -28,6 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Zerra.Tools\Zerra.Tools.csproj" />
     <ProjectReference Include="..\Zerra\Zerra.csproj" />
   </ItemGroup>
 
