--- a/Demo/ZerraDemo.Common/cqrssettings.json
+++ b/Demo/ZerraDemo.Common/cqrssettings.json
@@ -8,7 +8,7 @@
         },
         {
             "Name": "ZerraDemo.Service.Pets",
-            "InternalUrl": "localhost:9001",
+            "BindingUrl": "localhost:9001",
             "ExternalUrl": "localhost:9001",
             "EncryptionKey": "SecretTransportKey",
             "Types": [
@@ -19,7 +19,7 @@
         },
         {
             "Name": "ZerraDemo.Service.Weather",
-            "InternalUrl": "localhost:9002",
+            "BindingUrl": "localhost:9002",
             "ExternalUrl": "localhost:9002",
             "EncryptionKey": "SecretTransportKey",
             "Types": [
@@ -31,7 +31,7 @@
         },
         {
             "Name": "ZerraDemo.Service.WeatherCached",
-            "InternalUrl": "localhost:9005",
+            "BindingUrl": "localhost:9005",
             "ExternalUrl": "localhost:9005",
             "EncryptionKey": "SecretTransportKey",
             "Types": [
@@ -43,7 +43,7 @@
         },
         {
             "Name": "ZerraDemo.Service.Ledger1",
-            "InternalUrl": "localhost:9003",
+            "BindingUrl": "localhost:9003",
             "ExternalUrl": "localhost:9003",
             "EncryptionKey": "SecretTransportKey",
             "Types": [
@@ -54,7 +54,7 @@
         },
         {
             "Name": "ZerraDemo.Service.Ledger2",
-            "InternalUrl": "localhost:9004",
+            "BindingUrl": "localhost:9004",
             "ExternalUrl": "localhost:9004",
             "EncryptionKey": "SecretTransportKey",
             "Types": [
