Code Cleanup Warnings

--- a/Framework/Zerra.CQRS.RabbitMQ/Zerra.CQRS.RabbitMQ.csproj
+++ b/Framework/Zerra.CQRS.RabbitMQ/Zerra.CQRS.RabbitMQ.csproj
@@ -21,8 +21,16 @@
         <ProjectReference Include="..\Zerra\Zerra.csproj" />
     </ItemGroup>
 
-    <ItemGroup>
+    <ItemGroup Condition="'$(TargetFramework)' == 'net7.0'">
         <PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
+    </ItemGroup>
+
+    <ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
+        <PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
+    </ItemGroup>
+
+    <ItemGroup Condition="'$(TargetFramework)' == 'net5.0'">
+        <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
     </ItemGroup>
 
     <ItemGroup>
