--- a/Framework/Zerra.Identity/Zerra.Identity.csproj
+++ b/Framework/Zerra.Identity/Zerra.Identity.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net6.0;net5.0;netstandard2.1;netstandard2.0</TargetFrameworks>
+		<TargetFrameworks>net6.0;netstandard2.1;netstandard2.0</TargetFrameworks>
         <CheckEolTargetFramework>false</CheckEolTargetFramework>
 		<Authors>Steven Zawaski</Authors>
 		<Copyright>KaKush LLC</Copyright>
@@ -21,7 +21,7 @@
 		</Description>
 		<Company>KaKush LLC</Company>
 		<RepositoryUrl>https://github.com/szawaski/Zerra</RepositoryUrl>
-		<Version>0.9.1</Version>
+		<Version>0.9.2</Version>
 		<SignAssembly>false</SignAssembly>
 		<AssemblyVersion></AssemblyVersion>
 		<FileVersion></FileVersion>
@@ -32,7 +32,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="System.Security.Cryptography.Xml" Version="6.0.1" />
 	</ItemGroup>
 
