--- a/Framework/Zerra.Repository.EventStoreDB/Zerra.Repository.EventStoreDB.csproj
+++ b/Framework/Zerra.Repository.EventStoreDB/Zerra.Repository.EventStoreDB.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <TargetFrameworks>net6.0;net7.0;net8.0</TargetFrameworks>
+        <Nullable>enable</Nullable>
         <CheckEolTargetFramework>false</CheckEolTargetFramework>
         <Authors>Steven Zawaski</Authors>
         <Copyright>KaKush LLC</Copyright>
@@ -19,7 +20,7 @@ Zerra.Repository.EventStore.EventStoreDB.EventStoreDBProvider
         <PackageTags>Framework, CQRS, Microservice, Event Sourcing, Repository, ORM, EventStore</PackageTags>
         <RepositoryUrl>https://github.com/szawaski/Zerra</RepositoryUrl>
         <LangVersion>10.0</LangVersion>
-        <Version>4.8.0</Version>
+        <Version>4.9.0</Version>
     </PropertyGroup>
 
     <ItemGroup>
