--- a/Framework/Zerra.Repository.MySql/Zerra.Repository.MySql.csproj
+++ b/Framework/Zerra.Repository.MySql/Zerra.Repository.MySql.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>netstandard2.0;netstandard2.1;net6.0;net7.0;net8.0</TargetFrameworks>
+        <TargetFrameworks>net6.0;net7.0;net8.0</TargetFrameworks>
+        <Nullable>enable</Nullable>
         <CheckEolTargetFramework>false</CheckEolTargetFramework>
         <Authors>Steven Zawaski</Authors>
         <Copyright>KaKush LLC</Copyright>
@@ -18,7 +19,7 @@ Zerra.Repository.MySql.MySqlDataContext
         <PackageTags>Framework, CQRS, Microservice, Event Sourcing, Repository, ORM, SQL</PackageTags>
         <RepositoryUrl>https://github.com/szawaski/Zerra</RepositoryUrl>
         <LangVersion>10.0</LangVersion>
-        <Version>4.8.0</Version>
+        <Version>4.9.0</Version>
     </PropertyGroup>
 
     <ItemGroup>
